@@ -1,0 +1,17 @@
+HTTP/1.1 200 OK
+Content-Type: text/xml; charset=utf-8
+Content-Length: 524
+Server: Jetty(6.1.3)
+
+<?xml version="1.0" encoding="UTF-8"?>
+<schema name="example" version="1.1">
+  <types>
+    <fieldType name="string" class="solr.StrField" sortMissingLast="true" omitNorms="true"/>
+    <fieldType name="integer" class="solr.IntField" omitNorms="true"/>
+ </types>
+ <fields>
+   <field name="id" type="string" indexed="true" stored="true" required="true"/>
+   <field name="name" type="string" indexed="true" stored="true" required="true" />
+   <field name="age" type="integer" indexed="true" stored="true" />
+ </fields>
+</schema>
